[package]
name = "discord"
version = "0.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "https://docs.rs/discord/0.8.0"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide"]

[dependencies]
hyper = { version = "0.10", default-features = false }
hyper-native-tls = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
websocket = { git = "https://github.com/ArtemGr/rust-websocket", branch = "hyper-bump" }
bitflags = "0.7"
byteorder = "0.5"
log = "0.3"
base64-rs = "0.1.1"
flate2 = "0.2.14"
opus = { version = "0.2", optional = true }
multipart = { version = "0.9", default-features = false, features = ["client", "mock"] }
mime = "0.2.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.0.12"
default-features = false
optional = true
