[package]
name = "discord"
version = "0.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "https://docs.rs/discord/0.8.0"

[features]
default = []
voice = ["opus", "sodiumoxide"]

[dependencies]
websocket = "0.20"
futures = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitflags = "1.0"
byteorder = "1.1"
time = "0.1"
log = "0.3"
base64-rs = "0.1.1"
flate2 = "0.2.14"
opus = { version = "0.2", optional = true }

[dependencies.reqwest]
version = "0.8"
features = ["unstable"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.0.12"
default-features = false
optional = true

