[package]
name = "discord"
version = "0.9.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "https://docs.rs/discord/0.9.0"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide", "byteorder"]

[dependencies]
hyper = { version = "0.10", default-features = false }
hyper-native-tls = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# cf. https://github.com/mraof/rust-websocket
websocket = { git = "https://github.com/ArtemGr/rust-websocket", branch = "hyper-bump" }
bitflags = "1.2"
byteorder = { version = "1.3", optional = true }
log = "0.4.8"
base64-rs = "0.1.1"
flate2 = "1.0"
opus = { version = "0.2.1", optional = true }
multipart = { version = "0.17.0", default-features = false, features = ["client", "mock"] }

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.2.5"
default-features = false
features = ["std"]
optional = true
